attempting second fix on mobile for chat

--- a/components/StreamConnection/layout.css
+++ b/components/StreamConnection/layout.css
@@ -27,6 +27,6 @@
 
 @media (max-width: 900px) {
   .chatBody {
-   height:100%;
+   height:93%;
   }
 }
